# sp500-gnn

./: .gitignore  AGENTS.md  CLAUDE.md  config.py  create_dataset.ipynb  exploration.ipynb  features.ipynb  gnn.ipynb  graph_builder.ipynb  project_plan.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: data-features.md  graphs.md  models-train-eval.md
docs/: implementation_priority_plan.md  paper_ideas.md  project_outline.md  research_journey.md  results_writing_handoff.md  sp500_gnn_improvement_plan.md  volatility_granger_experiment_plan.md
docs/archived/: expansion_ideas.md  sp500_gnn_improvement_plan.md
notebooks/: 01_data.ipynb  02_features.ipynb  03_graphs.ipynb  04_baseline_models.ipynb  04_gnn_models.ipynb  04_models.ipynb  04b_gnn_hparam_search.ipynb  04b_gnn_hparam_search_multi_windows.ipynb  04c_rank_loss_models.ipynb  04d_macro_models.ipynb  04e_corr_window_models.ipynb  04f_volatility_granger_models.ipynb  05_evaluate.ipynb  06_portfolio.ipynb  07_significance.ipynb  08_final_results.ipynb
pre_work_exploration/: arima.ipynb  features.ipynb  gnn.ipynb  lstm.ipynb
scripts/: build_volatility_granger_graph.py  create_final_results_notebook.py  refresh_corr_window_evaluation.py  refresh_reproducibility_artifacts.py  register_corr_window_models.py  run_significance.py
src/: baseline_freeze.py  data.py  diagnostics.py  evaluate.py  experiment_registry.py  features.py  graphs.py  macro_dataset.py  model_artifacts.py  models.py  portfolio.py  regime_features.py  significance.py  train.py
(+1 files in other folders)
