[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pmdarima>=2.1.1",
    "scikit-learn>=1.7.2",
    "yfinance>=1.2.0",
]
