[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=2.3.3",
    "pmdarima>=2.1.1",
    "pyarrow==14.0.1",
    "scikit-learn>=1.7.2",
    "yfinance>=1.2.0",
    "torch==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "torch-geometric>=2.7.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
